--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ psycopg2 = "^2.9.9"
 pydantic = "^2.5.3"
 requests = "^2.31.0"
 pre-commit = "^3.6.0"
+fastapi = "^0.108.0"
+requests-oauthlib = "^1.3.1"
+itsdangerous = "^2.1.2"
+uvicorn = "^0.25.0"
+aioredis = "2.0.0"
+redis = "^5.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
