--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,23 @@
 repos:
-  -   repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.5.0  # Use the latest version
-      hooks:
-        -   id: trailing-whitespace
-        -   id: end-of-file-fixer
-        -   id: check-yaml
-        -   id: check-added-large-files
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0  # Use the latest version
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
     rev: v0.1.11
     hooks:
-      # Run the linter.
       - id: ruff
-        types:
-          - python
-        args: [ --fix, --exit-non-zero-on-fix]
-      # Run the formatter.
+        types: [python]
+        args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
-        types:
-          - python
+        types: [python]
+
   - repo: https://github.com/commitizen-tools/commitizen
     rev: 3.12.0
     hooks:
       - id: commitizen
+        stages: [commit-msg]
