refactor(main): assign REDIS_HOST from .env; Extract loading access_token, user_id into reusable functions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "balancechecker"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Anson <tmmanson77@gmail.com>"]
 readme = "README.md"
@@ -25,6 +25,14 @@ redis = "^5.0.1"
 [tool.poetry.group.dev.dependencies]
 commitizen = "^3.13.0"
 
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "pep440"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
