--- a/docker/.env-docker.template
+++ b/docker/.env-docker.template
@@ -4,7 +4,7 @@ ACCESS_TOKEN=""
 ACCOUNT_ID=""
 CLIENT_ID=""
 CLIENT_SECRET=""
-REDIS_HOST="localhost"
+REDIS_HOST="cache"
 REDIS_PASSWORD="eYVX7EwVsomepasswordmxKPCDmwMtyKVge8oLd2t81"
 BASE_URL="https://example.com"
 REDIRECT_URI="https://example.com/oauth/callback"
