--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 TELEGRAM_BOT_API_TOKEN=""
 CLIENT_ID=""
 CLIENT_SECRET=""
-REDIS_HOST="localhost"
+REDIS_HOST="localhost" # use 'cache' if you are using docker-compose
 REDIS_PASSWORD="eYVX7EwVsomepasswordmxKPCDmwMtyKVge8oLd2t81"
 BASE_URL="https://example.com"
 REDIRECT_URI="https://example.com/oauth/callback"
