set default val in Settings, when dotenv file is not providing the env var.

--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,4 @@ REDIS_HOST="localhost" # use 'cache' if you are using docker-compose
 REDIS_PASSWORD="eYVX7EwVsomepasswordmxKPCDmwMtyKVge8oLd2t81"
 BASE_URL="https://example.com"
 REDIRECT_URI="https://example.com/oauth/callback"
-SECRET_DEV=""
+#SECRET_DEV=""
