--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ aioredis = "2.0.0"
 redis = "^5.0.1"
 pydantic-settings = "^2.1.0"
 pytest = "^7.4.4"
+pytest-mock = "^3.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
