--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ redis = "^5.0.1"
 pydantic-settings = "^2.1.0"
 pytest = "^7.4.4"
 pytest-mock = "^3.12.0"
+fakeredis = "^2.20.1"
 
 
 [tool.poetry.group.dev.dependencies]
