--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pydantic-settings = "^2.1.0"
 pytest = "^7.4.4"
 pytest-mock = "^3.12.0"
 fakeredis = "^2.20.1"
+pytest-asyncio = "^0.23.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -61,5 +62,7 @@ commands = pytest {tty:--color=yes} {posargs}
 [gh]
 python =
     3.12 = py312
-    3.11 = py311, type
 """
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
