--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ aioredis = "2.0.0"
 redis = "^5.0.1"
 pydantic-settings = "^2.1.0"
 pytest = "^7.4.4"
+pytest-mock = "^3.12.0"
+fakeredis = "^2.20.1"
+pytest-asyncio = "^0.23.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -43,3 +46,23 @@ build-backend = "poetry.core.masonry.api"
 combine-as-imports = true
 case-sensitive = true
 force-single-line = true
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+env_list =
+    py{312}
+isolated_build = true
+
+[testenv]
+description = Run pytest
+deps = pytest>=6
+commands = pytest {tty:--color=yes} {posargs}
+
+[gh]
+python =
+    3.12 = py312
+"""
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
